$Id: History,v 1.22 2000-05-19 07:04:59 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

19 May 2000 John Allison  (interfaces-V01-01-00)
- G4UIterminal displays a candidate list in case a given parameter is
  wrong (Makoto Asai).

26 Mar 2000 Makoto Asai
- Introducing a new G4UIterminal with UNIX-like shell.

10 Nov 1999 Hajime Yoshida  (interfaces-V00-01-03)
- Added less<G4String> argument (Guy).
- G4UIWin32.hh, G4UIXm.hh : usage of G4std::less in G4std::map.
- G4VInteractorManager.cc : G4std::find, G4std::remove.

08 Nov 1999 Hajime Yoshida
- tag interfaces--V00-01-02 for STT

08 Nov 1999 Hajime Yoshida
- GAG/src/G4UIGAG.cc RWT => STL vector
- basic/include/G4UIterminal.hh, GAG/include/G4UIGAG.hh => documentation

02 Nov 1999 Guy Barrand
- doc comments for G4UIWin32.hh, G4UIXm.hh, G4UIXaw.hh, G4Xt.hh, G4Win32.hh, G4VInterativeSession.hh, G4VInteractorManager.hh.

02 Nov 1999 Guy Barrand
- basic/G4UIWin32, G4UIXm : RW -> STL.
- common/G4VBasicShell, G4VInteractiveSession, G4VInteractorManager : RW -> STL.
29 Oct. 1999 Hajime Yoshida
- tag interfaces-V00-01-01

27 Oct. 1999 Guy Barrand
- interfaces/common/src/G4Xt.cc : protect XtAppInit against 