@@ -26,6 +26,7 @@ private:
   G4UIdirectory* interactorDirectory;
   G4UIcommand* addMenu;
   G4UIcommand* addButton;
+  G4UIcommand* sys;
 };
 
 #endif
